crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__array_index_set_type_mismatch_error-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "arr: [Int]",
    "arr: [Int]",
]
