crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__array_index_set_type_mismatch_error-3.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Expected type `Int`, found type `Text`",
            30..37,
        ),
    ],
}
